# microsalt

./: Cargo.toml  README.md  index.html  params.json
src/: lib.rs  shared.rs
src/boxy/: mod.rs
src/hash/: mod.rs  sha512.rs
src/onetimeauth/: mod.rs  poly1305.rs
src/secretbox/: mod.rs  xsalsa20poly1305.rs
src/sign/: ed25519.rs  mod.rs
